[package]
name = "Income divider"
version = "0.1.0"
authors = ["YounesMaar <younesmaaroufi67@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"

[build-dependencies]
slint-build = "1.5"

[package.metadata.bundle]
name = "Income divider"
"io.github.username.project"